traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:20: error: type mismatch;
 found   : Unit
 required: Boolean
    }else if (getDirection()==Direction.OUEST){
          ^